# ps4-update-decryptor

./: .gitignore  CMakeLists.txt  COPYING  README.md  toolchain.cmake
.github/workflows/: main.yml
sce_sys/: param.sfo
src/: CMakeLists.txt  decrypt.c  defines.h  install.cmake  main.c  pup.c  pup.h  pupup.c  pupup.h
